--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,20 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real-Time Translator</title>
+    <title>Elegant Translator</title>
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
-        <h1>Real-Time Translator</h1>
-        <textarea id="inputText" placeholder="Enter English text here..."></textarea>
-        <select id="targetLanguage">
-            <option value="de">German</option>
-            <option value="fr">French</option>
-            <option value="es">Spanish</option>
-        </select>
-        <div id="translationOutput"></div>
-        <button id="speakButton">Speak Translation</button>
+        <h1><i class="fas fa-language"></i> Elegant Translator</h1>
+        <div class="input-section">
+            <textarea id="inputText" placeholder="Enter English text here..."></textarea>
+            <select id="targetLanguage">
+                <option value="de">German</option>
+                <option value="fr">French</option>
+                <option value="es">Spanish</option>
+            </select>
+        </div>
+        <div class="output-section">
+            <div id="translationOutput"></div>
+            <button id="speakButton"><i class="fas fa-volume-up"></i> Speak Translation</button>
+        </div>
         <div id="lastTranslation"></div>
     </div>
     <script type="module" src="index.js"></script>
