--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,19 +11,25 @@
 <body>
     <div class="container">
         <h1><i class="fas fa-language"></i> Elegant Translator</h1>
-        <div class="input-section">
-            <textarea id="inputText" placeholder="Enter English text here..."></textarea>
-            <select id="targetLanguage">
-                <option value="de">German</option>
-                <option value="fr">French</option>
-                <option value="es">Spanish</option>
-            </select>
+        <div id="authSection">
+            <button id="loginButton">Login with Internet Identity</button>
+            <button id="logoutButton" style="display: none;">Logout</button>
         </div>
-        <div class="output-section">
-            <div id="translationOutput"></div>
-            <button id="speakButton"><i class="fas fa-volume-up"></i> Speak Translation</button>
+        <div id="translatorSection" style="display: none;">
+            <div class="input-section">
+                <textarea id="inputText" placeholder="Enter English text here..."></textarea>
+                <select id="targetLanguage">
+                    <option value="de">German</option>
+                    <option value="fr">French</option>
+                    <option value="es">Spanish</option>
+                </select>
+            </div>
+            <div class="output-section">
+                <div id="translationOutput"></div>
+                <button id="speakButton"><i class="fas fa-volume-up"></i> Speak Translation</button>
+            </div>
+            <div id="lastTranslation"></div>
         </div>
-        <div id="lastTranslation"></div>
     </div>
     <script type="module" src="index.js"></script>
 </body>
